[package]
name = "build_epub"
version = "0.1.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
yaserde = "0.7"
yaserde_derive = "0.7"
zip = "0.5"
