[package]
name = "bookfactory"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
serde = { version = "1.0", features = ["derive"] }
sys-locale = "0.1"
toml = "0.5"
uuid = { version = "0.8", features = ["v4"] }
yaserde = "0.7"
yaserde_derive = "0.7"
zip = "0.5"
